tdf#74932 FILESAVE: Shapes appear when saving a .XLSX file with filter

Problem Description
If the attribute hidden is set and then after exporting it to .xlsx, the shape does not remain hidden.

XML Difference
Original :
<xdr:cNvPr id="2" name="Rectangle 1" hidden="1"/>

Roundtrip :
<xdr:cNvPr id="0" name="CustomShape 1"></xdr:cNvPr>

Change-Id: I2e87a484ea984b56415891fd157995cb49453f76