sc/qa/unit/subsequent_export-test.cxx
@@ -143,6 +143,7 @@ public:
     void testSheetCondensedCharacterSpace();
     void testTextUnderlineColor();
     void testSheetRunParagraphProperty();
+    void testHiddenShape();
 
     CPPUNIT_TEST_SUITE(ScExportTest);
     CPPUNIT_TEST(test);
@@ -196,6 +197,7 @@ public:
     CPPUNIT_TEST(testSheetCondensedCharacterSpace);
     CPPUNIT_TEST(testTextUnderlineColor);
     CPPUNIT_TEST(testSheetRunParagraphProperty);
+    CPPUNIT_TEST(testHiddenShape);
 
     CPPUNIT_TEST_SUITE_END();
 
@@ -2628,6 +2630,16 @@ void ScExportTest::testSheetRunParagraphProperty()
     assertXPath(pDoc, "/x:sst/x:si/x:r[1]/x:rPr[1]", 1);
 
     xDocSh->DoClose();
+}
+
+void ScExportTest::testHiddenShape()
+{
+    ScDocShellRef xDocSh = loadDoc("hiddenShape.", XLSX);
+    CPPUNIT_ASSERT(xDocSh.Is());
+
+    xmlDocPtr pDoc = XPathHelper::parseExport(&(*xDocSh), m_xSFactory, "xl/drawings/drawing1.xml", XLSX);
+    CPPUNIT_ASSERT(pDoc);
+    assertXPath(pDoc, "/xdr:wsDr/xdr:twoCellAnchor/xdr:sp[1]/xdr:nvSpPr/xdr:cNvPr", "hidden", "1");
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(ScExportTest);
